refactor(mentor) : add alt attributes to all images

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -49,11 +49,11 @@
                     <ul class="link-cards">
                         <li class="card">
                             <button class="add-favorite">
-                                <img src="img/star.svg" alt="" class="normal-star">
-                                <img src="img/purplestar.svg" alt="" class="purple-star">
+                                <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg1.jpg" alt="">
+                                <img src="img/bg1.jpg" alt="card-thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show more" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -76,11 +76,11 @@
                         </li>
                         <li class="card card-selected">
                             <button class="add-favorite">
-                                <img src="img/star.svg" alt="" class="normal-star">
-                                <img src="img/purplestar.svg" alt="" class="purple-star">
+                                <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg2.jpg" alt="">
+                                <img src="img/bg2.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -89,7 +89,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -103,10 +103,10 @@
                         </li>
                         <li class="card">
                             <button class="add-favorite">
-                                <img src="img/purplestar.svg" alt="">
+                                <img src="img/purplestar.svg" alt="add-favorite">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg3.jpg" alt="">
+                                <img src="img/bg3.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -115,7 +115,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -129,11 +129,11 @@
                         </li>
                         <li class="card">
                             <button class="add-favorite">
-                                <img src="img/star.svg" alt="" class="normal-star">
-                                <img src="img/purplestar.svg" alt="" class="purple-star">
+                                <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg4.jpg" alt="">
+                                <img src="img/bg4.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -142,7 +142,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -156,10 +156,10 @@
                         </li>
                         <li class="card">
                             <button class="add-favorite">
-                                <img src="img/purplestar.svg" alt="">
+                                <img src="img/purplestar.svg" alt="add-favorite">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg5.jpg" alt="">
+                                <img src="img/bg5.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -168,7 +168,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -182,10 +182,10 @@
                         </li>
                         <li class="card">
                             <button class="add-favorite">
-                                <img src="img/purplestar.svg" alt="">
+                                <img src="img/purplestar.svg" alt="add-favorite">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg6.jpg" alt="">
+                                <img src="img/bg6.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -194,7 +194,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -224,11 +224,11 @@
                     <ul class="card-row">
                         <li class="card no-shrink-card">
                             <button class="add-favorite">
-                                <img src="img/star.svg" alt="" class="normal-star">
-                                <img src="img/purplestar.svg" alt="" class="purple-star">
+                                <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg7.jpg" alt="">
+                                <img src="img/bg7.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -237,7 +237,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -251,11 +251,11 @@
                         </li>
                         <li class="card card-selected no-shrink-card">
                             <button class="add-favorite">
-                                <img src="img/star.svg" alt="" class="normal-star">
-                                <img src="img/purplestar.svg" alt="" class="purple-star">
+                                <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg8.jpg" alt="">
+                                <img src="img/bg8.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -264,7 +264,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -281,10 +281,10 @@
                         </li>
                         <li class="card no-shrink-card">
                             <button class="add-favorite">
-                                <img src="img/purplestar.svg" alt="">
+                                <img src="img/purplestar.svg" alt="add-favorite">
                             </button>
                             <div class="thumbnail">
-                                <img src="img/bg9.jpg" alt="">
+                                <img src="img/bg9.jpg" alt="Card thumbnail">
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
@@ -293,7 +293,7 @@
                                     </div>
                                     <div class="card-info-more">
                                         <button>
-                                            <img src="img/kebab.svg" alt="" class="kebab">
+                                            <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
@@ -338,7 +338,7 @@
                 </div>
                 <div class="feature-example-image">
                     <div class="share-bg">
-                        <img src="img/share-bg.png" alt="" class="feature-example-image">
+                        <img src="img/share-bg.png" alt="Container Background Image" class="feature-example-image">
                     </div>
                     <div class="folder-change">
                         <div class="folder-share">
@@ -395,11 +395,11 @@
                             <ul class="link-cards">
                                 <li class="card">
                                     <button class="add-favorite">
-                                        <img src="img/star.svg" alt="" class="normal-star">
-                                        <img src="img/purplestar.svg" alt="" class="purple-star">
+                                        <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                        <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                                     </button>
                                     <div class="thumbnail">
-                                        <img src="img/bg1.jpg" alt="">
+                                        <img src="img/bg1.jpg" alt="Card thumbnail">
                                     </div>
                                     <div class="card-info">
                                         <div class="card-info-bar">
@@ -408,7 +408,7 @@
                                             </div>
                                             <div class="card-info-more">
                                                 <button>
-                                                    <img src="img/kebab.svg" alt="" class="kebab">
+                                                    <img src="img/kebab.svg" alt="Show More" class="kebab">
                                                 </button>
                                             </div>
                                         </div>
@@ -422,11 +422,11 @@
                                 </li>
                                 <li class="card card-selected">
                                     <button class="add-favorite">
-                                        <img src="img/star.svg" alt="" class="normal-star">
-                                        <img src="img/purplestar.svg" alt="" class="purple-star">
+                                        <img src="img/star.svg" alt="add-favorite" class="normal-star">
+                                        <img src="img/purplestar.svg" alt="add-favorite" class="purple-star">
                                     </button>
                                     <div class="thumbnail">
-                                        <img src="img/bg2.jpg" alt="">
+                                        <img src="img/bg2.jpg" alt="Card thumbnail">
                                     </div>
                                     <div class="card-info">
                                         <div class="card-info-bar">
@@ -435,7 +435,7 @@
                                             </div>
                                             <div class="card-info-more">
                                                 <button>
-                                                    <img src="img/kebab.svg" alt="" class="kebab">
+                                                    <img src="img/kebab.svg" alt="Show More" class="kebab">
                                                 </button>
                                             </div>
                                         </div>
@@ -449,10 +449,10 @@
                                 </li>
                                 <li class="card">
                                     <button class="add-favorite">
-                                        <img src="img/purplestar.svg" alt="">
+                                        <img src="img/purplestar.svg" alt="add-favorite">
                                     </button>
                                     <div class="thumbnail">
-                                        <img src="img/bg3.jpg" alt="">
+                                        <img src="img/bg3.jpg" alt="Card thumbnail">
                                     </div>
                                     <div class="card-info">
                                         <div class="card-info-bar">
@@ -461,7 +461,7 @@
                                             </div>
                                             <div class="card-info-more">
                                                 <button>
-                                                    <img src="img/kebab.svg" alt="" class="kebab">
+                                                    <img src="img/kebab.svg" alt="Show More" class="kebab">
                                                 </button>
                                             </div>
                                         </div>
@@ -505,22 +505,22 @@
                 <ul>
                     <li>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="img/akar-icons_facebook-fill.svg" alt="">
+                            <img src="img/akar-icons_facebook-fill.svg" alt="Facebook link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/?lang=ko" target="_blank">
-                            <img src="img/akar-icons_twitter-fill.svg" alt="">
+                            <img src="img/akar-icons_twitter-fill.svg" alt="Twitter link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/" target="_blank">
-                            <img src="img/akar-icons_youtube-fill.svg" alt="">
+                            <img src="img/akar-icons_youtube-fill.svg" alt="Youtube link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/" target="_blank">
-                            <img src="img/ant-design_instagram-filled.svg" alt="">
+                            <img src="img/ant-design_instagram-filled.svg" alt="Instagram link logo">
                         </a>
                     </li>
                 </ul>
