--- a/Linkbrary/signup.html
+++ b/Linkbrary/signup.html
@@ -58,10 +58,10 @@
                     다른 방식으로 가입하기
                     <div class="social-links">
                         <a href="https://www.google.com/" target="_blank">
-                            <img src="img/google.svg" alt="">
+                            <img src="img/google.svg" alt="Google Sign In Link">
                         </a>
                         <a href="https://www.kakaocorp.com/page/" target="_blank">
-                            <img src="img/kakao.svg" alt="" class="img-border">
+                            <img src="img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
                         </a>
                     </div>
                 </div>
