--- a/Linkbrary/faq.html
+++ b/Linkbrary/faq.html
@@ -38,22 +38,22 @@
                 <ul>
                     <li>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="img/akar-icons_facebook-fill.svg" alt="">
+                            <img src="img/akar-icons_facebook-fill.svg" alt="Facebook link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://twitter.com/?lang=ko" target="_blank">
-                            <img src="img/akar-icons_twitter-fill.svg" alt="">
+                            <img src="img/akar-icons_twitter-fill.svg" alt="Twitter link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/" target="_blank">
-                            <img src="img/akar-icons_youtube-fill.svg" alt="">
+                            <img src="img/akar-icons_youtube-fill.svg" alt="Youtube link logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/" target="_blank">
-                            <img src="img/ant-design_instagram-filled.svg" alt="">
+                            <img src="img/ant-design_instagram-filled.svg" alt="Instagram link logo">
                         </a>
                     </li>
                 </ul>
