--- a/Linkbrary/signin.html
+++ b/Linkbrary/signin.html
@@ -35,7 +35,7 @@
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
                         <button class="eye-btn">
-                            <img src="img/eye-on.svg" alt="" class="eye-on">
+                            <img src="img/eye-on.svg" alt="Show Password" class="eye-on">
                         </button>
                     </div>
                 </div>
@@ -46,10 +46,10 @@
                     소셜 로그인
                     <div class="social-links">
                         <a href="https://www.google.com/" target="_blank">
-                            <img src="img/google.svg" alt="">
+                            <img src="img/google.svg" alt="Google Sign In Link">
                         </a>
                         <a href="https://www.kakaocorp.com/page/" target="_blank">
-                            <img src="img/kakao.svg" alt="" class="img-border">
+                            <img src="img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
                         </a>
                     </div>
                 </div>
