--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
+    <!--nav-->
     <nav>
       <div class="gnb">
         <a href="index.html"><img src="img/logo.svg" alt="Linkbrary-logo" /></a>
         <a href="signin.html" class="header-link signin">로그인</a>
       </div>
     </nav>
+
+    <!--header-->
     <header>
-      <div class="contents-01">
+      <div class="header-contents">
         <h1 class="header-title">
           <span class="header-title-gradient">세상의 모든 정보</span>를<br />
           쉽게 저장하고 관리해 보세요
@@ -23,94 +26,76 @@
         <img src="img/header.png" alt="header-img" class="header-img" />
       </div>
     </header>
+
+    <!--main-->
     <main>
-      <!--section-01-->
+      <!--원하는 링크를 저장하는 section-01-->
       <section>
-        <div class="card padding">
-          <div class="description">
-            <h1>
-              <span class="description-storage">원하는 링크</span>를<br />
-              저장하세요
-            </h1>
-            <p>
-              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-              사고 싶은 옷, 기억하고 싶은 모든 것을<br />
-              한 공간에 저장하세요.
-            </p>
-          </div>
-          <div class="img-wrap">
-            <img
-              src="img/contents-01.png"
-              alt="contents-02"
-              class="contents-img"
-            />
-          </div>
+        <div class="description">
+          <h1>
+            <span class="gradient-01 background-clip">원하는 링크</span>를<br />
+            저장하세요
+          </h1>
+          <p>
+            나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
+            사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+            한 공간에 저장하세요.
+          </p>
+        </div>
+        <img src="img/contents-01.png" alt="contents-01" class="contents-img" />
+      </section>
+      <!--링크를 폴더로 관리하는 section-02-->
+      <section>
+        <img src="img/contents-02.png" alt="contents-02" class="contents-img" />
+        <div class="description">
+          <h1>
+            링크를 폴더로<br />
+            <span class="gradient-02 background-clip">관리</span>하세요
+          </h1>
+          <p>
+            나만의 폴더를 무제한으로 만들고<br />
+            다양하게 활용할 수 있습니다.
+          </p>
         </div>
       </section>
-      <!--section-02-->
+      <!--저장한 링크를 공유하는 section-03-->
       <section>
-        <div class="card">
-          <div class="img-wrap">
-            <img
-              src="img/contents-02.png"
-              alt="contents-03"
-              class="contents-img"
-            />
-          </div>
-          <div class="description">
-            <h1>
-              링크를 폴더로<br />
-              <span class="description-manage">관리</span>하세요
-            </h1>
-            <p>
-              나만의 폴더를 무제한으로 만들고<br />
-              다양하게 활용할 수 있습니다.
-            </p>
-          </div>
+        <div class="description">
+          <h1>
+            저장한 링크를<br />
+            <span class="gradient-03 background-clip">공유</span>해 보세요.
+          </h1>
+          <p>
+            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
+            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+            공유해 보세요.
+          </p>
+        </div>
+        <div>
+          <img
+            src="img/contents-03.png"
+            alt="contents-03"
+            class="contents-img"
+          />
         </div>
       </section>
-      <!--section-03-->
+      <!--저장한 링크를 검색하는 section-04-->
       <section>
-        <div class="card padding">
-          <div class="description">
-            <h1>
-              저장한 링크를<br />
-              <span class="description-share">공유</span>해 보세요.
-            </h1>
-            <p>
-              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-              공유해 보세요.
-            </p>
-          </div>
-          <div>
-            <img
-              src="img/contents-03.png"
-              alt="contents-04"
-              class="contents-img"
-            />
-          </div>
-        </div>
-      </section>
-      <!--section-04-->
-      <section>
-        <div class="card">
-          <div class="img-wrap">
-            <img src="img/contents-04.png" class="contents-img" />
-          </div>
-          <div class="description">
-            <h1>
-              저장한 링크를<br />
-              <span class="description-search">검색</span>해 보세요
-            </h1>
-            <p>중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
-          </div>
+        <img src="img/contents-04.png" alt="contents-04" class="contents-img" />
+        <div class="description">
+          <h1>
+            저장한 링크를<br />
+            <span class="gradient-04 background-clip">검색</span>해 보세요
+          </h1>
+          <p>중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
         </div>
       </section>
     </main>
+
+    <!--footer-->
     <footer>
       <div class="footer-wrap">
-        <p class="corporate">©codeit - 2023</p>
+        <p class="copyright">©codeit - 2023</p>
         <div class="footer-link">
           <a href="/privacy">Privacy Policy</a>
           <a href="/faq">FAQ</a>
