--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -24,7 +24,7 @@
             <em class="gradient1">세상의 모든 정보</em>를<br> 쉽게 저장하고 관리해 보세요
         </h2>
         <a href="/signup.html" class="btn" id="link-add">링크 추가하기</a>
-        <section id="s1">
+        <section id="page-sample-section">
             <div id="content1">
                 <div class="search-bar">
                     <input type="text" name="search-link" id="search-link" placeholder="링크를 검색하세요" class="search-input">
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </section>
-        <section id="s2">
+        <section id="feature-description-section">
             <div id="content2" class="container">
                 <div class="feature-description">
                     <h3><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
