refactor : rename and change settings in content div

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -24,8 +24,8 @@
             <em class="gradient1">세상의 모든 정보</em>를<br> 쉽게 저장하고 관리해 보세요
         </h2>
         <a href="/signup.html" class="btn" id="link-add">링크 추가하기</a>
-        <section id="page-sample-section">
-            <div id="content1">
+        <section class="page-sample-section">
+            <div class="page-sample-content">
                 <div class="search-bar">
                     <input type="text" name="search-link" id="search-link" placeholder="링크를 검색하세요" class="search-input">
                 </div>
@@ -211,7 +211,7 @@
             </div>
         </section>
         <section id="feature-description-section">
-            <div id="content2" class="container">
+            <div class="container">
                 <div class="feature-description">
                     <h3><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
                     <p class="description">
