feat: Add meta tag url

--- a/3rd_week_mission/index.html
+++ b/3rd_week_mission/index.html
@@ -11,8 +11,13 @@
     />
     <meta
       property="og:image"
-      content="https://www.istockphoto.com/kr/%EC%82%AC%EC%A7%84/%EB%8F%84%EC%84%9C%EB%8A%94-gm949118068-259102273"
+      content="https://media.istockphoto.com/id/949118068/ko/%EC%82%AC%EC%A7%84/%EB%8F%84%EC%84%9C%EB%8A%94.jpg?s=2048x2048&w=is&k=20&c=TkO0-_hV6XCxbsh62Owto90KqYUO7NreCLu_Jy2ikX4="
       key="image"
+    />
+    <meta
+      property="og:url"
+      content="https://week3-jisungjeong.netlify.app/"
+      key="url"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@linkbrary" />
@@ -20,7 +25,7 @@
     <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
     <meta
       name="twitter:image"
-      content="https://www.istockphoto.com/kr/%EC%82%AC%EC%A7%84/%EB%8F%84%EC%84%9C%EB%8A%94-gm949118068-259102273"
+      content="https://media.istockphoto.com/id/949118068/ko/%EC%82%AC%EC%A7%84/%EB%8F%84%EC%84%9C%EB%8A%94.jpg?s=2048x2048&w=is&k=20&c=TkO0-_hV6XCxbsh62Owto90KqYUO7NreCLu_Jy2ikX4="
     />
     <link
       rel="stylesheet"
