--- a/3rd_week_mission/index.html
+++ b/3rd_week_mission/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:image"
-      content="https://media.istockphoto.com/id/949118068/ko/%EC%82%AC%EC%A7%84/%EB%8F%84%EC%84%9C%EB%8A%94.jpg?s=2048x2048&w=is&k=20&c=TkO0-_hV6XCxbsh62Owto90KqYUO7NreCLu_Jy2ikX4="
+      content="https://i.namu.wiki/i/8JbLEOm1EezAZzdujEwIA8rvaHFgPyqA3lUfr0HQXQ3T9tVClLGppcw82RTpyguF18pYI4ysHX9C0yzkb6G_7A.webp"
       key="image"
     />
     <meta
@@ -25,7 +25,7 @@
     <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
     <meta
       name="twitter:image"
-      content="https://media.istockphoto.com/id/949118068/ko/%EC%82%AC%EC%A7%84/%EB%8F%84%EC%84%9C%EB%8A%94.jpg?s=2048x2048&w=is&k=20&c=TkO0-_hV6XCxbsh62Owto90KqYUO7NreCLu_Jy2ikX4="
+      content="https://i.namu.wiki/i/8JbLEOm1EezAZzdujEwIA8rvaHFgPyqA3lUfr0HQXQ3T9tVClLGppcw82RTpyguF18pYI4ysHX9C0yzkb6G_7A.webp"
     />
     <link
       rel="stylesheet"
