fix : apply page description section dim effect responsive

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -25,6 +25,7 @@
         </h2>
         <a href="/signup.html" class="btn" id="link-add">링크 추가하기</a>
         <section class="page-sample-section">
+            <img src="img/_dim.png" alt="" class="page-sample-dim-effect">
             <div class="page-sample-content">
                 <div class="search-bar">
                     <input type="text" name="search-link" id="search-link" placeholder="링크를 검색하세요" class="search-input">
@@ -210,7 +211,7 @@
                 </div>
             </div>
         </section>
-        <section id="feature-description-section">
+        <section class="feature-description-section">
             <div class="container">
                 <div class="feature-description">
                     <h3><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
