--- a/main.html
+++ b/main.html
@@ -7,82 +7,85 @@
     <link rel="stylesheet" href="main.style.css" />
   </head>
   <body>
-    <nav>
-      <div class="bar">
-        <a href="index.html">
-          <img class="header-logo" src="./img/logo.svg" alt="logo" />
+    <nav class="nav">
+      <div class="nav__bar">
+        <a href="main.html">
+          <img class="logo" src="./img/logo.svg" alt="logo" />
         </a>
-        <a class="login" href="signin.html">로그인</a>
+        <a class="login__link" href="signin.html">로그인</a>
       </div>
     </nav>
-
-    <div class="main">
-      <div class="main-description">
-        <span class="text-gradient">세상의 모든 정보</span
-        ><span
-          >를<br />
-          쉽게 저장하고 관리해 보세요</span
-        >
-      </div>
-      <div class="signUp">
-        <a class="addLink" href="signup.html">링크 추가하기</a>
-      </div>
-      <div class="header-img-section">
-        <img class="header-img" src="./img/main.png" alt="header-img" />
-      </div>
-    </div>
-    <div class="section save">
-      <div class="save-description">
-        <h2>
-          <span class="link-gradient">원하는 링크</span>를<br />
-          저장하세요
-        </h2>
-        <div class="description">
-          나중에 읽고 싶은 글. 다시 보고싶은 영상.<br />
-          사고싶은 옷. 기억하고 싶은 모든 것을<br />
-          한 공간에 저장하세요.
+    <main>
+      <section class="main">
+        <div class="main__description">
+          <span class="main--gradient">세상의 모든 정보</span
+          ><span
+            >를<br />
+            쉽게 저장하고 관리해 보세요</span
+          >
         </div>
-      </div>
-      <img class="save-img" src="./img/save.png" alt="save" />
-    </div>
-    <div class="section">
-      <img class="manage-image" src="./img/manage.png" alt="manage" />
-      <div class="manage-description">
-        <h2>
-          링크를 폴더로<br />
-          <span class="manage-gradient">관리</span>하세요.
-        </h2>
-        <div class="description">
-          나만의 폴더를 무제한으로 만들고<br />
-          다양하게 활용할 수 있습니다.
+        <div class="signup">
+          <a class="signup__link" href="signup.html">링크 추가하기</a>
         </div>
-      </div>
-    </div>
-    <div class="section share">
-      <div class="share-description">
-        <h2>
-          저장한 링크를<br />
-          <span class="share-gradient">공유</span>해 보세요.
-        </h2>
-        <div class="description">
-          여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-          가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-          공유해보세요.
+        <div class="main__img-section">
+          <img class="main__img" src="./img/main.png" alt="main" />
         </div>
-      </div>
-      <img class="share-img" src="./img/share.png" alt="share" />
-    </div>
-    <div class="section search">
-      <img class="search-img" src="./img/search.png" alt="search" />
-      <div class="search-description">
-        <h2>
-          저장한 링크를<br />
-          <span class="search-gradient">검색</span>해 보세요.
-        </h2>
-        <div class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</div>
-      </div>
-    </div>
-    <div class="footer">
+      </section>
+      <section class="section save">
+        <div class="save__description">
+          <h2>
+            <span class="save--gradient">원하는 링크</span>를<br />
+            저장하세요
+          </h2>
+          <div class="description">
+            나중에 읽고 싶은 글. 다시 보고싶은 영상.<br />
+            사고싶은 옷. 기억하고 싶은 모든 것을<br />
+            한 공간에 저장하세요.
+          </div>
+        </div>
+        <img class="save__img" src="./img/save.png" alt="save" />
+      </section>
+      <section class="section">
+        <img class="manage__image" src="./img/manage.png" alt="manage" />
+        <div class="manage-description">
+          <h2>
+            링크를 폴더로<br />
+            <span class="manage--gradient">관리</span>하세요.
+          </h2>
+          <div class="description">
+            나만의 폴더를 무제한으로 만들고<br />
+            다양하게 활용할 수 있습니다.
+          </div>
+        </div>
+      </section>
+      <section class="section share">
+        <div class="share__description">
+          <h2>
+            저장한 링크를<br />
+            <span class="share--gradient">공유</span>해 보세요.
+          </h2>
+          <div class="description">
+            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
+            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+            공유해보세요.
+          </div>
+        </div>
+        <img class="share__img" src="./img/share.png" alt="share" />
+      </section>
+      <section class="section">
+        <img class="search__img" src="./img/search.png" alt="search" />
+        <div class="search__description">
+          <h2>
+            저장한 링크를<br />
+            <span class="search--gradient">검색</span>해 보세요.
+          </h2>
+          <div class="description">
+            중요한 정보들을 검색으로 쉽게 찾아보세요.
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
       <div class="footer-section">
         <div class="footer-year">©codeit - 2023</div>
         <div class="footer-main">
@@ -104,6 +107,6 @@
           /></a>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
