refactor : split tablet style to index-tablet.css

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -7,6 +7,7 @@
     <title>Linkbrary</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index-tablet.css">
 </head>
 
 <body>
@@ -314,7 +315,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="feature-example-image">
+                <div class="feature-example-image folder-manage-image">
                     <div class="folder-change">
                         <p class="op-font">폴더 이름 변경</p>
                         <input type="text" name="folder-name" class="folder-input" placeholder="내용 입력">
@@ -341,7 +342,7 @@
                         공유해 보세요.
                     </p>
                 </div>
-                <div class="feature-example-image">
+                <div class="feature-example-image folder-share-image">
                     <div class="share-bg">
                         <img src="img/share-bg.png" alt="Container Background Image" class="feature-example-image">
                     </div>
@@ -374,7 +375,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="feature-example-image">
+                <div class="feature-example-image folder-search-image">
                     <div class="search-box">
                         <div class="search-bar"><input type="text" name="link-name" id="link-name" class="search-input"
                                 placeholder="코드잇">
