fix : share link background error fixed

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -343,9 +343,7 @@
                     </p>
                 </div>
                 <div class="feature-example-image folder-share-image">
-                    <div class="share-bg">
-                        <img src="img/share-bg.png" alt="Container Background Image" class="feature-example-image">
-                    </div>
+                    <img src="img/share-bg.png" alt="Container Background Image" class="share-bg">
                     <div class="folder-change">
                         <div class="folder-share">
                             <p class="op-font">폴더 공유</p>
