--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- 창 크기에 비례해 요소 크기, 간격 조정 -->
+  <!-- 창 크기에 비례해 요소 크기, 간격 조정. -->
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1,  
   user-scalable=no">
   <!-- font: abel -->
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style-랜딩.css">
+  <link rel="stylesheet" href="style-landing.css">
 
   <title>Linkbrary</title>
 </head>
