--- a/signin/signin.html
+++ b/signin/signin.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="style-로그인.css">
+  <link rel="stylesheet" href="style-signin.css">
 
   <title>signin</title>
 </head>
