--- a/signup/signup.html
+++ b/signup/signup.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="style-회원가입.css">
+  <link rel="stylesheet" href="style-signup.css">
 
   <title>signup</title>
 </head>
