--- a/signin/signin.html
+++ b/signin/signin.html
@@ -23,12 +23,12 @@
 
 <body>
   <section>
-    <a href="../랜딩.html" target="_blank">
+    <a href="../landing.html" target="_blank">
       <img class="logo" alt="logo" src="../images/logo.svg" width=240>
     </a>
     <h1 class="text">
       회원이 아니신가요?
-      <a class="text signup" href="../signup/회원가입.html">회원 가입하기</a>
+      <a class="text signup" href="../signup/signup.html">회원 가입하기</a>
     </h1>
     <form class="form">
       <label for="username">
