--- a/signup/signup.html
+++ b/signup/signup.html
@@ -23,12 +23,12 @@
 
 <body>
   <section>
-    <a href="../랜딩.html" target="_blank">
+    <a href="../landing.html" target="_blank">
       <img class="logo" alt="logo" src="../images/logo.svg" width=240>
     </a>
     <h1 class="text">
       이미 회원이신가요?
-      <a class="text signup" href="../signin/로그인.html">로그인하기</a>
+      <a class="text signup" href="../signin/signin.html">로그인하기</a>
     </h1>
     <form class="form">
       <label for="username">
