Replaced 'button' tag selector with class selctor
tag selectors are less specific, harder to debug than class selectors.

thus, reassigned buttons of signin and signup page with class selectors.

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -43,7 +43,7 @@
         <img class="eye" alt="show_password" src="../images/eye-on.svg">
       </div>
   
-      <button>
+      <button class="signin_buttons">
         로그인
       </button>
     </form>  
