--- a/signup/signup.html
+++ b/signup/signup.html
@@ -50,7 +50,7 @@
         <img class="eye" alt="show_password" src="../images/eye-on.svg">
       </div>
   
-      <button>
+      <button class="signup_button">
         회원가입
       </button>
     </form>  
