--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-  <html lang="en">
+  <html lang="ko">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Acme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/globalStyle.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/landing.css">
     <title>Linkbrary</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
         <div class="top-section-title">
         <h1 id="worldinformation">세상의 모든 정보<span>를<br>쉽게 저장하고 관리해 보세요</span></h1>
         <a href="signup.html"><button class="btn-large">링크 추가하기</button></a>
-        <img src="img-landing/img.png">
+        <img src="img-landing/img.png" alt="easily store and manage all the information in the world">
         </div>
       </section> 
       <section class="middle-section">
@@ -35,10 +35,10 @@
             <h1 id="wantlink">원하는 링크<span>를<br>저장하세요</span></h1>
             <h5>나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br>사고 싶은 옷, 기억하고 싶은 모든 것을<br>한 공간에 저장하세요.</h5>
           </div>
-          <img src="img-landing/img1.png">
+          <img src="img-landing/img1.png" alt="the link you want Save it">
         </div>
         <div class="middle-section-content">
-          <img src="img-landing/img2.png">
+          <img src="img-landing/img2.png" alt="link to a folder Take care of yourself">
           <div class="middle-section-content-title">
             <h1 id="management"><span>링크를 폴더로</span><br>관리<span>하세요</span></h1>
             나만의 폴더를 무제한으로 만들고<br>다양하게 활용할 수 있습니다.</h5>
@@ -49,10 +49,10 @@
             <h1 id="share"><span>저장한 링크를</span><br>공유<span>해 보세요.</span></h1>
             <h5>여러 링크를 폴더에 담고 공유할 수 있습니다.<br>가족, 친구, 동료들에게 쉽고 빠르게 링크를<br>공유해 보세요.</h5>
           </div>
-          <img src="img-landing/img3.png">
+          <img src="img-landing/img3.png" alt="share your saved link">
         </div>
         <div class="middle-section-content">
-          <img src="img-landing/img4.png">
+          <img src="img-landing/img4.png" alt="search the link you saved">
           <div class="middle-section-content-title">
             <h1 id="search"><span>저장한 링크를</span><br>검색<span>해 보세요</span></h1>
             <h5>중요한 정보들을 검색으로 쉽게 찾아보세요.</h5>
@@ -62,18 +62,20 @@
     </main>
     <footer>
       <section class="footer-wrap">
-        <div class="footer-text" id="codeit-2023">
-          ©codeit - 2023
-        </div>
-        <div class="footer-text" id="faq">
-          <a href="privacy.html"><div>Privacy Policy</div></a>
-          <a href="fap.html"><div>FAQ</div></a>
-        </div>
-        <div class="footer-icon">
-          <a href="https://www.facebook.com" target="_blank"><img src="icon/akar-icons_facebook-fill.png"></a>
-          <a href="https://twitter.com" target="_blank"><img src="icon/akar-icons_twitter-fill.png"></a>
-          <a href="https://www.youtube.com" target="_blank"><img src="icon/akar-icons_youtube-fill.png"></a>
-          <a href="https://www.instagram.com" target="_blank"><img src="icon/ant-design_instagram-filled.png"></a>
+        <div class="footer-element">
+          <div class="footer-text" id="codeit-2023">
+            ©codeit - 2023
+          </div>
+          <div class="footer-text" id="faq">
+            <a href="privacy.html"><div>Privacy Policy</div></a>
+            <a href="fap.html"><div>FAQ</div></a>
+          </div>
+          <div class="footer-icon">
+            <a href="https://www.facebook.com" target="_blank"><img src="icon/akar-icons_facebook-fill.png"></a>
+            <a href="https://twitter.com" target="_blank"><img src="icon/akar-icons_twitter-fill.png"></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="icon/akar-icons_youtube-fill.png"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="icon/ant-design_instagram-filled.png"></a>
+          </div>
         </div>
       </section>
     </footer>
