--- a/signin.html
+++ b/signin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Acme&display=swap" rel="stylesheet">
   <title>Linkbrary</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="sign.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/globalStyle.css">
+  <link rel="stylesheet" href="css/sign.css">
 </head>
 <body>
   <section>
