--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index-tablet.css">
+    <link rel="stylesheet" href="/css/index-mobile.css">
 </head>
 
 <body>
