refactor : change link-add from id to class

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -26,7 +26,7 @@
             <h2 class="top-heading">
                 <em class="gradient1">세상의 모든 정보</em>를<br> 쉽게 저장하고 관리해 보세요
             </h2>
-            <a href="/signup.html" class="btn" id="link-add">링크 추가하기</a>
+            <a href="/signup.html" class="btn link-add">링크 추가하기</a>
 
             <div class="page-sample">
                 <img src="img/_dim.png" alt="" class="page-sample-dim-effect">
