refactor : change style in top heading

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -24,7 +24,11 @@
     <main>
         <section class="page-sample-section">
             <h2 class="top-heading">
-                <em class="gradient1">세상의 모든 정보</em>를<br> 쉽게 저장하고 관리해 보세요
+                <em class="gradient1">세상의 모든 정보</em>를<br>
+                <span class="heading-style">
+                    쉽게 저장하고
+                </span>
+                관리해 보세요
             </h2>
             <a href="/signup.html" class="btn link-add">링크 추가하기</a>
 
