feat : Add mobile style for feature description section

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -318,6 +318,11 @@
                         </li>
                     </ul>
                 </div>
+                <p class="mobile-description">
+                    나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+                    사고 싶은 옷, 기억하고 싶은 모든 것을
+                    한 공간에 저장하세요.
+                </p>
             </div>
             <div class="container">
                 <div class="feature-example-image folder-manage-image">
@@ -336,6 +341,11 @@
                         다양하게 활용할 수 있습니다.
                     </p>
                 </div>
+
+                <p class="mobile-description">
+                    나만의 폴더를 무제한으로 만들고
+                    다양하게 활용할 수 있습니다.
+                </p>
             </div>
             <div class="container">
                 <div class="feature-description">
@@ -376,6 +386,10 @@
                         </div>
                     </div>
                 </div>
+                <p class="mobile-description">
+                    여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를
+                    공유해 보세요.
+                </p>
             </div>
             <div class="container">
                 <div class="feature-example-image folder-search-image">
@@ -494,6 +508,9 @@
                         중요한 정보들을 검색으로 쉽게 찾아보세요.
                     </p>
                 </div>
+                <p class="mobile-description">
+                    중요한 정보들을 검색으로 쉽게 찾아보세요.
+                </p>
             </div>
         </section>
     </main>
